@@ -1,6 +1,7 @@
 Revision history for Mojolicious-Plugin-Credentials
 
 {{$NEXT}}
+          - Add suppor for MOJO_CREDENTIALS_DIR environmental variable
 
 0.003     2024-01-31 22:22:02+01:00 Europe/Brussels
           - Add --editor flag to credentials edit
